# CryptoFileSystem

./: settings.gradle
app/: build.gradle  encrypt.cpp
app/cpp/: CMakeLists.txt  native-lib.cpp
app/cpp/encryptor/: encryptor.c  encryptor.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/homework/cryptofilesystem/: App.kt
app/src/main/java/com/homework/cryptofilesystem/data/: AuthRepositoryImpl.kt
app/src/main/java/com/homework/cryptofilesystem/data/crypto/: KeyExchangeApi.kt
app/src/main/java/com/homework/cryptofilesystem/data/prefs/: SharedPrefs.kt
app/src/main/java/com/homework/cryptofilesystem/domain/entity/: AuthEntity.kt
app/src/main/java/com/homework/cryptofilesystem/domain/repository/: AuthRepository.kt
app/src/main/java/com/homework/cryptofilesystem/domain/usecase/: AuthUseCase.kt  ChangeAuthUseCase.kt
app/src/main/java/com/homework/cryptofilesystem/presentation/: Extensions.kt  MainActivity.kt
app/src/main/java/com/homework/cryptofilesystem/presentation/authorization/: AuthBaseFragment.kt  AuthFragment.kt  AuthViewModel.kt  AuthViewState.kt
app/src/main/res/drawable/: bg_custom_message.xml  ic_baseline_file_24.xml  ic_baseline_folder_24.xml
app/src/main/res/layout/: activity_main.xml  change_password_item.xml  crypto_file_fragment.xml  file_item.xml  filename_item.xml  select_file_fragment.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
